--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Wikipedia-like page for a young singer">
-    <meta name="keywords" content="Singer, Music, Biography, Discography, Wikipedia">
+    <meta name="description" content="Alici Sol Bio">
+    <meta name="keywords" content="Singer, Music, Biography, Discography">
     <title>Alici</title>
     <style>
         body {
@@ -17,7 +17,7 @@
         header {
             background-color: #2a4d69;
             color: #ffffff;
-            padding: 10px 20px;
+            padding: 5px 10px;
             text-align: center;
         }
         nav {
@@ -36,21 +36,25 @@
             text-decoration: underline;
         }
         main {
-            padding: 20px;
+            padding: 10px 20px;
             max-width: 800px;
             margin: auto;
             background: #ffffff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         section {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
-        h1, h2, h3 {
+        h1 {
+            color: #ffffff;
+        }
+        h2, h3 {
             color: #2a4d69;
         }
+       
         footer {
             text-align: center;
-            padding: 10px 20px;
+            padding: 5px 10px;
             background: #2a4d69;
             color: #ffffff;
             position: relative;
@@ -63,7 +67,6 @@
 
 <header>
     <h1>Alici</h1>
-    <p>Alici</p>
 </header>
 
 <nav>
