--- a/index.htm
+++ b/index.htm
@@ -79,8 +79,9 @@
 <main>
     <section id="biography">
         <h2>Biography</h2>
-        <p>Alici (Alice V. de M. Sol) (born 28 January 1999) is a Brazilian-American singer, songwriter, and performer. She composes and performs mainly jazz songs while also having techno songs published as Girasol.</p>
-        <p>Born in Belo Horizonte, Minas Gerais, Brazil, she grew up in Seattle, WA, while living for 3.5 years in Cambridge-UK. In 2021, she received a Bachelor of Music in Songwriting from the <a href="https://www.berklee.edu/" target=_blank>Berklee College of Music</a> in Boston, MA, and moved to New York City, where she resides.</p>
+        <p>Alici (Alice V. de M. Sol) (born 28 January 1999) is a Brazilian-American singer, songwriter, and performer. Representing the cultural tapestry of Belo Horizonte, Brazil, Alici is a New York-based musician on a mission to join her birth country's serene sounds with the city's gritty energy.</p>
+        <p>She draws from her diverse upbringing split between Brazil, Seattle, and the UK to redefine the idea of what Bossa Nova and Trip Hop sounds like to a contemporary audience. Inspired by timeless acts such as Gal Costa, J Dilla, Sade, and Portishead, Alici stands as a beacon of creativity, passion, and innovation, breathing new life into Brazilian-inspired R&B and jazz.</p>
+        <p>In 2021, she received a Bachelor of Music in Songwriting from the <a href="https://www.berklee.edu/" target=_blank>Berklee College of Music</a> in Boston, MA, and moved to New York City, where she resides.</p>
     </section>
 
     <section id="discography">
@@ -106,8 +107,28 @@
 
     <section id="shows">
         <h2>Shows</h2>
+        <h3>Upcoming</h3>
         <ul>
-            <li><b>Coming soon</b></li>
+            <li>Coming soon</li>
+        </ul>
+        <h3>Tour History</h3>
+        <ul>
+            <li><b>Oct. 25, 2024</b> - Gramercy Theatre (New York, NY) w/ hope tala</li>
+            <li><b>Oct. 30, 2024</b> - El Rey Theatre (Los Angeles, CA) w/ hope tala</li>
+            <li><b>Sept. 26, 2024</b> - Axel Arigato In-Store Event & Alici Album Release Party - Invite Only (New York, NY)</li>
+            <li><b>Aug. 10, 2024</b> - Bowery Ballroom (New York, NY) w/ Juan Wauters</li>
+            <li><b>Aug. 8, 2024</b> - Alici Sol (DJ Set) @ Matte Projects BLOOM by Hero exhibition & speakeasy at Rockefeller Center (New York, NY)</li>
+            <li><b>July 19, 2024</b> - Public Records (Brooklyn, NY) w/ Nathan Dies & Hien</li>
+            <li><b>May 23, 2024</b>  - Lisboa, Portugal - Valsa (Headline)</li>
+            <li><b>May 19, 2024</b> - Esposende, Portugal - NICE (Headline)</li>
+            <li><b>May 18, 2024</b> - Barcelona, Spain - L'Occulta (w/ Bruno Berle)</li>
+            <li><b>May 16, 2024</b> - Berlin, Germany - Startbahn (w/ Bruno Berle)</li>
+            <li><b>May 12, 2024</b> - Paris, France - Le Petite Forest Urbane (Headline)</li>
+            <li><b>May 10, 2024</b> - Krakow, Poland @ Pauls Boutqiue Record Store (w/ Bruno Berle)</li>
+            <li><b>May 8, 2024</b> - Hamburg, Germany @ Knust (w/ Bruno Berle)</li>
+            <li><b>May 5, 2024</b> - Rotterdam, Netherlands @ V11 (w/ Bruno Berle)</li>
+            <li><b>May 4, 2024</b> - Cologne, Germany @  Eigelsteintorburg (w/ Bruno Berle)</li>
+            <li><b>May 2, 2024</b> - Munich, Germany @ Bellevue Di Monaco (w/ Bruno Berle)</li>
         </ul>
     </section>
 
