--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
 </header>
 
 <nav>
-    <a href="#biography">Biography</a>
+    <a href="#biography">Bio</a>
     <a href="#discography">Discography</a>
     <a href="#shows">Shows</a>
     <a href="#references">References</a>
@@ -78,10 +78,10 @@
 
 <main>
     <section id="biography">
-        <h2>Biography</h2>
+        <h2>Bio</h2>
         <p>Alici (Alice V. de M. Sol) (born 28 January 1999) is a Brazilian-American singer, songwriter, and performer. Representing the cultural tapestry of Belo Horizonte, Brazil, Alici is a New York-based musician on a mission to join her birth country's serene sounds with the city's gritty energy.</p>
         <p>She draws from her diverse upbringing split between Brazil, Seattle, and the UK to redefine the idea of what Bossa Nova and Trip Hop sounds like to a contemporary audience. Inspired by timeless acts such as Gal Costa, J Dilla, Sade, and Portishead, Alici stands as a beacon of creativity, passion, and innovation, breathing new life into Brazilian-inspired R&B and jazz.</p>
-        <p>In 2021, she received a Bachelor of Music in Songwriting from the <a href="https://www.berklee.edu/" target=_blank>Berklee College of Music</a> in Boston, MA, and moved to New York City, where she resides.</p>
+        <p>In 2021, she received a Bachelor of Music in Songwriting from the <a href="https://www.berklee.edu/" target=_blank>Berklee College of Music</a> in Boston, MA.</p>
     </section>
 
     <section id="discography">
@@ -98,10 +98,10 @@
         <ul>
             <li><b>Amazon Music</b>: <a href="https://music.amazon.com/artists/B0013CPFPY/alici" target=_blank>Alici</a></li>
             <li><b>Apple Music</b>: <a href="https://music.apple.com/us/artist/alici/1565307779" target=_blank>Alici</a></li>
-            <li><b>Elevator Music</b>: October/2024 - <a href="https://www.youtube.com/watch?v=-350ExuyYt8" target=_blank>Alici</a> and band</li>
             <li><b>Spotify</b>: <a href="https://open.spotify.com/artist/3xwrVmAg320G7DzTPkhOjX" target=_blank>Alici</a></li>
             <li><b>Spotify</b>: <a href="https://open.spotify.com/artist/6TDR7L4YcPYS0I1o5yHIzH" target=_blank>Girasol</a></li>
             <li><b>Soundcloud</b>: <a href="https://soundcloud.com/alicisol" target=_blank>Alici</a></li>
+            <li><b>Elevator Music</b> (YouTube): October/2024 - <a href="https://www.youtube.com/watch?v=-350ExuyYt8" target=_blank>Alici</a> and band</li>
         </ul>
     </section>
 
