--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,7 @@
 
 <nav>
     <a href="#biography">Bio</a>
-    <a href="#discography">Discography</a>
+    <a href="#music">Music</a>
     <a href="#shows">Shows</a>
     <a href="#references">References</a>
 </nav>
@@ -84,11 +84,11 @@
         <p>In 2021, she received a Bachelor of Music in Songwriting from the <a href="https://www.berklee.edu/" target=_blank>Berklee College of Music</a> in Boston, MA.</p>
     </section>
 
-    <section id="discography">
-        <h2>Discography</h2>
+    <section id="music">
+        <h2>Music</h2>
         <h3>Albums</h3>
         <ul>
-            <li><b>Souvenir</b> (September/2024) - Written & produced by Alice Sol & Nathan Diesendruck (Vinyl at <a href="https://alici.bandcamp.com/album/souvenir" target=_blank>bandcamp</a> or <a href="https://store.pack.am/products/pre-order-alici-souvenir-1st-edition-vinyl-lp" target=_blank>pack</a>)</li>
+            <li><b>Souvenir</b> (September/2024) - Written & produced by Alice Sol & Nathan Diesendruck (Vinyl at <a href="https://store.pack.am/products/pre-order-alici-souvenir-1st-edition-vinyl-lp" target=_blank>pack</a>) or <a href="https://alici.bandcamp.com/album/souvenir" target=_blank>bandcamp</a></li>
         </ul>
         <h3>Singles</h3>
         <ul>
@@ -101,7 +101,7 @@
             <li><b>Spotify</b>: <a href="https://open.spotify.com/artist/3xwrVmAg320G7DzTPkhOjX" target=_blank>Alici</a></li>
             <li><b>Spotify</b>: <a href="https://open.spotify.com/artist/6TDR7L4YcPYS0I1o5yHIzH" target=_blank>Girasol</a></li>
             <li><b>Soundcloud</b>: <a href="https://soundcloud.com/alicisol" target=_blank>Alici</a></li>
-            <li><b>Elevator Music</b> (YouTube): October/2024 - <a href="https://www.youtube.com/watch?v=-350ExuyYt8" target=_blank>Alici</a> and band</li>
+            <li><b>Elevator Music</b> (YouTube): <a href="https://www.youtube.com/watch?v=-350ExuyYt8" target=_blank>Alici</a> and band</li>
         </ul>
     </section>
 
